--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,13 +6,15 @@ img {
   max-height: 100%;
 }
 input,
-textarea {
+textarea,
+select {
   @apply border border-gray-300 rounded-md px-1 w-full;
   @apply mb-2;
 }
 
 input:focus,
-textarea:focus {
+textarea:focus,
+select:focus {
   @apply border-blue-900;
 }
 
